# needle-in-a-haystack

./: .gitignore  README.md  haystack.py  main.py  pyproject.toml
