[project]
name = "needle-in-a-haystack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "openai>=1.108.1",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
